navbar login and signup set up

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -7,12 +7,13 @@
 
 body {
   background-color: black;
-}
-
-#app {
   height: 100vh;
   position: relative;
 }
+
+/* #app {
+
+} */
 
 #text-display {
   margin: 3em 3em 0 3em;
@@ -41,7 +42,24 @@ button {
 
   position: absolute;
   height: 10rem;
-  width: 100%;
-  bottom: 1;
+  width: 99%;
+  bottom: 0;
 
+}
+
+#login-modal {
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 20em;
+  height: 5em;
+  position: absolute;
+}
+
+#cancel-sign-in-btn{
+  position: absolute;
+  top: 0;
+  right: 0;
 }
